# docker-ansible-core

./: .env  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  ansible_collections.yml  pyproject.toml
.github/: .build.env  matrix.yml
.github/workflows/: build-image.yml  build-matrix.yml
.gitlab/: .build.env.yml  matrix.yml
.gitlab/workflows/: .gitlab-ci.yml
scripts/: test-image.sh
taskfiles/: b2v.yml
